[package]
name = "uplink"
version = "1.0.0"
edition = "2024"
authors = ["MOBSkuchen"]
readme = "../README.md"
repository = "github.com/MOBSkuchen/uplink"
license = "MIT"

[dependencies]
console = "0.16.3"
indicatif = "0.18.4"
tar = "0.4.45"
zstd = "0.13.3"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2+spec-1.1.0"
chrono = "0.4.44"
rand = "0.10.1"