[package]
name = "uplink-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
console = "0.15"
indicatif = "0.17"
tar = "0.4"
zstd = "0.13"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2+spec-1.1.0"
chrono = "0.4"
rand = "0.10.1"